[package]
name = "wt_csv"
description = "Custom CSV parser for the .csv files that the game War Thunder utilizes"
repository = "https://github.com/FlareFlo/wt_csv"
license = "Apache-2.0"

version = "0.3.0"

edition = "2021"
rust-version = "1.58.1"

exclude = ["lang/*", "lang_edit/*"] # These should be externall pulled for testing